# egui_winit-0.31-beta2

./: Cargo.toml
crates/eframe/: CHANGELOG.md  Cargo.toml
crates/eframe/src/: epi.rs  lib.rs
crates/eframe/src/native/: epi_integration.rs  event_loop_context.rs  glow_integration.rs  run.rs  wgpu_integration.rs  winit_integration.rs
crates/egui-winit/: CHANGELOG.md
crates/egui-winit/src/: lib.rs  window_settings.rs
crates/egui/src/: viewport.rs  widget_text.rs
crates/egui/src/atomics/: atom_layout.rs
crates/egui/src/containers/: scene.rs  scroll_area.rs  window.rs
crates/egui_demo_app/src/: main.rs
crates/egui_glow/examples/: pure_glow.rs
crates/egui_glow/src/: winit.rs
crates/glutin-winit/: Cargo.toml
crates/glutin-winit/src/: event_loop.rs  lib.rs  window.rs
examples/confirm_exit/src/: main.rs
examples/custom_3d_glow/src/: main.rs
examples/custom_font/src/: main.rs
examples/custom_keypad/src/: main.rs
examples/custom_style/src/: main.rs
examples/custom_window_frame/src/: main.rs
examples/external_eventloop/src/: main.rs
examples/external_eventloop_async/src/: app.rs
examples/file_dialog/src/: main.rs
examples/hello_world/src/: main.rs
examples/hello_world_par/src/: main.rs
examples/hello_world_simple/src/: main.rs
examples/images/src/: main.rs
examples/multiple_viewports/src/: main.rs
examples/puffin_profiler/src/: main.rs
examples/serial_windows/src/: main.rs
examples/user_attention/src/: main.rs
tests/test_background_logic/src/: main.rs
tests/test_ui_stack/src/: main.rs
tests/test_viewports/src/: main.rs
(+4 files in other folders)
