[package]
name = "glutin-winit"
version = "0.5.0"
edition = "2021"
rust-version = "1.70.0"
authors = ["Kirill Chibisov <contact@kchibisov.com>"]
description = "Glutin bootstrapping helpers with winit"
license = "MIT"
repository = "https://github.com/rust-windowing/glutin"

[dependencies]
glutin = { workspace = true, default-features = false }
raw-window-handle = { workspace = true }
winit = { workspace = true, default-features = false }

[build-dependencies]
cfg_aliases = "0.2.1"

[features]
default = ["egl", "glx", "x11", "wayland", "wgl"]
egl = ["glutin/egl"]
glx = ["glutin/glx", "x11"]
wayland = ["glutin/wayland", "winit/wayland"]
wgl = ["glutin/wgl"]
x11 = ["glutin/x11", "winit/x11"]
